Update language of intro to aesthetics, making it clear that theres more

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -1,5 +1,5 @@
 \section*{The Transcendental Aesthetic}
-Our expedition begins with the \emph{transcendental aesthetics} -- that philosophical trailhead, which separates the orderly boulevards of physics from the uncharted wilderness of metaphysics. For what better way there is to explore beyond the physical -- μετὰ τὰ φυσικά -- than by starting with the very foundation of our means of physical perception? Indeed through Kant's introductory division of knowledge as \emph{a priori} and \emph{a posteriori}, we are already driven to aesthetics, as it is the very means in which we know things \emph{a posteriori}.\footnote{A priori knowledge comes \emph{prior} to experience, lit. `from earlier.' A posteriori knowledge comes \emph{posterior} to experience, lit. `from later.'} The faculty of sensibility is shown to us as a means in which we (i.e. the subject, the reasoning human), have the power to intuit \emph{sensations}, which are presented to us by objects that are external to us. The study of sensations, sensibility, and the intuitions which we yield is the science of aesthetics. And it is from this perch of aesthetics, where Kant performs the Copernican leap that upturns our world.
+Our expedition begins with the \emph{transcendental aesthetics} -- that philosophical trailhead, which separates the orderly boulevards of physics from the uncharted wilderness of metaphysics. For what better way there is to explore beyond the physical -- μετὰ τὰ φυσικά -- than by starting with the very foundation of our means of physical perception? Indeed through Kant's introductory division of knowledge as \emph{a priori} and \emph{a posteriori}, we are already driven to aesthetics, as it is the very means in which we know things \emph{a posteriori}.\footnote{A priori knowledge comes \emph{prior} to experience, lit. `from earlier.' A posteriori knowledge comes \emph{posterior} to experience, lit. `from later.'} The faculty of sensibility is shown to us as a means in which we (i.e. the subject, the reasoning human), have the power to intuit \emph{sensations}, which are presented to us by objects that are external to us. The study of sensations, sensibility, and the intuitions which we yield is the science of aesthetics. And it is from this springboard of aesthetics, where Kant begins the Copernican leap that upturns our world.
 
 For we ask ourselves the question: "can there be any a priori knowledge?" To which Kant responds with the demonstration that: although cognitions are composed of concepts which are in reference to objects, all concepts by necessity do not directly refer to their underlying object, but rather only to a sensible \emph{intuition}. However, our faculty of sensibility is never an active one. We never reach out and `grasp' the objects that we wish to sense with some sort of sensory ectoplasm. Rather, the faculty of sensibility is entirely passive -- it is solely our capacity for the \emph{receptivity} of sensation, our ability to be \emph{affected} by objects that are external to us:
 
