Began the transcendental logic, and added further endpage notes

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -58,6 +58,7 @@ Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a m
 \end{quote}
 
 \noindent
-Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics is important to us, because it gives us two important transcendental elements that work with the pure elements of understanding as the basis for cognition. Through this process of analysing the material of sensibility (sensation), we are able to find the a priori concepts of space and time. However, we must not rest on our laurels yet -- for although we have visited this one landmark, there are further mountains ahead, which we must conquer in order to view the entirety of the Kantian island. For intuition alone does not cognition make -- the scion of the union of sensibility and understanding demands equal contribution from both parents. To understand the metaphysical groundwork for cognition, we must next examine the \emph{transcendental logic}. Our guide hurries us forth -- eager to apply this same method of analysis, to the faculty of understanding. We will not make him wait.
+Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics is important to us, because it gives us two important transcendental elements that work with the pure elements of understanding as the basis for cognition. Through this process of analysing the material of sensibility (sensation), we are able to find the a priori concepts of space and time. However, we must not rest on our laurels yet -- for although we have visited this one landmark, there are further mountains ahead, which we must conquer in order to view the entirety of the Kantian island. For intuition alone does not cognition make -- the scion of the union of sensibility and understanding demands equal contribution from both parents. To understand the metaphysical groundwork for cognition, we must next examine the \emph{transcendental logic}. It is only in light of both the \emph{logic} and the \emph{aesthetic}, could we come to a proper assessment of Kant's \emph{Critique}. Our guide hurries us forth -- eager to apply his transcendental method of analysis, to the faculty of understanding. We will not make him wait.
 
 \section*{The Transcendental Logic}
+As the faculty of sensibility deals with sensations, the faculty of understanding deals with concepts. Sensibility without understanding is only reaction, while understanding without sensation is but nothing but computation. It is the union of both sensibility and understanding which yields cognition, that fruit of the mind so characteristic of the human animal. As the science of understanding is named logic, Kant brings us to this aptly named summit of the transcendental logic. The journey takes place in two steps. We first acknowledge that the characteristic nature of any concept is that of \emph{function}: "the unity of the act of arranging various presentations under one common presentation" \autocite[B93]{hackett}.
