--- a/latex/sections/endpage.tex
+++ b/latex/sections/endpage.tex
@@ -1,20 +1,25 @@
 % Uncomment for bibliography using biblatex (see includes/formatting.tex)
 \section*{Bibliography}
+All quotations from Immanel Kant's \emph{Critique of Pure Reason} are sourced from the 1996 Werner S. Pluhar translation issued by Hackett Publishing. Citation line numbers refer to the Second (i.e. `B') edition of the \emph{Critique}, as per the \emph{Akademie} manuscript.
 % Print every citation in citations.bib, even if unused by \autocite
 \nocite{*}
 \printbibliography[heading=none]
 
 \section*{Technical Notes}
 This essay is typeset using \LaTeX, an Open Source document typesetting language
-by Donald Knuth, and version-controlled via Git. The git repository containing notes, source code, and revision history is available upon request.
+by Donald Knuth, and version-controlled via Git. The git repository containing notes, source code, and revision history is available at the following link.
 
 % Optional: Include github URL here
+\url{https://github.com/ShenZhouHong/kant-aufsatz}
 
 \noindent
 This essay is written using the EssayTemplate, an open source \LaTeX\ essay
 template designed for the Humanities by Shen Zhou Hong. It is available at:
 
-https://github.com/ShenZhouHong/EssayTemplate
+\url{https://github.com/ShenZhouHong/EssayTemplate}
+
+\noindent
+An additional section on the structure of the \emph{Critique} and it's organisation has been omitted from this document for the sake of conciseness. It is available as an optional appendix in the git repository.
 
 \vfill
 \begin{center}
