Completed second paragraph on yielding judgements from concepts

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -61,4 +61,6 @@ Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a m
 Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics is important to us, because it gives us two important transcendental elements that work with the pure elements of understanding as the basis for cognition. Through this process of analysing the material of sensibility (sensation), we are able to find the a priori concepts of space and time. However, we must not rest on our laurels yet -- for although we have visited this one landmark, there are further mountains ahead, which we must conquer in order to view the entirety of the Kantian island. For intuition alone does not cognition make -- the scion of the union of sensibility and understanding demands equal contribution from both parents. To understand the metaphysical groundwork for cognition, we must next examine the \emph{transcendental logic}. It is only in light of both the \emph{logic} and the \emph{aesthetic}, could we come to a proper assessment of Kant's \emph{Critique}. Our guide hurries us forth -- eager to apply his transcendental method of analysis, to the faculty of understanding. We will not make him wait.
 
 \section*{The Transcendental Logic}
-As the faculty of sensibility deals with sensations, the faculty of understanding deals with concepts. Sensibility without understanding is only reaction, while understanding without sensation is but nothing but computation. It is the union of both sensibility and understanding which yields cognition, that fruit of the mind so characteristic of the human animal. As the science of understanding is named logic, Kant brings us to this aptly named summit of the transcendental logic. The journey takes place in two steps. We first acknowledge that the characteristic nature of any concept is that of \emph{function}: "the unity of the act of arranging various presentations under one common presentation" \autocite[B93]{hackett}.
+As the faculty of sensibility deals with sensations, the faculty of understanding deals with concepts. Sensibility without understanding is only reaction, while understanding without sensation is but nothing but computation. It is the union of both sensibility and understanding which yields cognition, that fruit of the mind so characteristic of the human animal. As the science of understanding is named logic, Kant brings us to this aptly named summit of the transcendental logic. The journey takes place in two steps. We first acknowledge that the characteristic nature of any concept is that of \emph{function}: "the unity of the act of arranging various presentations under one common presentation" \autocite[B93]{hackett}. Given a raw and unorganised manifold of intuitive presentations, the functional process is one in which such a manifold is unified under a singular concept. That is how a whiff of asphalt, the roar of an engine, and the sparkle of sun-shined chrome all combine to form the singular concept of `race car.'
+
+But yet all such unity is also difference -- for every way in which various presentations are combined, we also perform the negative act of excluding other, unrelated presentations. Only in such a manner do our concepts have any order. This means that concepts are also \emph{judgements} -- acts of discernment and differentiation. Thus lies the basis step of Kant's inductive proof.\footnote{A mathematical analogy. Inductive proofs are completed in two steps, a \emph{basis} step, and an \emph{inductive} step.} As all acts of understanding are concepts, and all concepts judgement\ldots\ therefore all understanding is judgement. "Now since all acts of the understanding can be reduced to judgments, the understanding as such can be presented as a power of judgment" \autocite[B94]{hackett}. This reductive method in which we reduce the problem of finding the a prioriae of concepts to that of judgements is an indispensable one -- as a complete, transcendental analysis of the different modes of judgement is a far easier task, than the analysis of infinite unbounded concepts. We are able to start our analysis by drawing upon the prior scholarship of mundane logic, much like beginning a difficult ascent from a pre-established base camp. 
