Added categories and judgements

--- a/latex/includes/packages.tex
+++ b/latex/includes/packages.tex
@@ -15,6 +15,8 @@
 \usepackage{graphicx}               % Required for embedding images
 \usepackage{booktabs}               % For prettier tables
 \usepackage{geometry}             % Sets more "reasonable" margin-sizes
+\usepackage{multicol}
+\usepackage{float}
 % \usepackage{tikz}                 % Used for graphical illustrations.
 % \usetikzlibrary{calc,intersections,through,backgrounds}
 % \usepackage{amsmath}              % Needed for most math things.
