--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -63,4 +63,79 @@ Ultimately, as a work of metaphysical knowledge, the transcendental aesthetics i
 \section*{The Transcendental Logic}
 As the faculty of sensibility deals with sensations, the faculty of understanding deals with concepts. Sensibility without understanding is only reaction, while understanding without sensation is but nothing but computation. It is the union of both sensibility and understanding which yields cognition, that fruit of the mind so characteristic of the human animal. As the science of understanding is named logic, Kant brings us to this aptly named summit of the transcendental logic. The journey takes place in two steps. We first acknowledge that the characteristic nature of any concept is that of \emph{function}: "the unity of the act of arranging various presentations under one common presentation" \autocite[B93]{hackett}. Given a raw and unorganised manifold of intuitive presentations, the functional process is one in which such a manifold is unified under a singular concept. That is how a whiff of asphalt, the roar of an engine, and the sparkle of sun-shined chrome all combine to form the singular concept of `race car.'
 
-But yet all such unity is also difference -- for every way in which various presentations are combined, we also perform the negative act of excluding other, unrelated presentations. Only in such a manner do our concepts have any order. This means that concepts are also \emph{judgements} -- acts of discernment and differentiation. Thus lies the basis step of Kant's inductive proof.\footnote{A mathematical analogy. Inductive proofs are completed in two steps, a \emph{basis} step, and an \emph{inductive} step.} As all acts of understanding are concepts, and all concepts judgement\ldots\ therefore all understanding is judgement. "Now since all acts of the understanding can be reduced to judgments, the understanding as such can be presented as a power of judgment" \autocite[B94]{hackett}. This reductive method in which we reduce the problem of finding the a prioriae of concepts to that of judgements is an indispensable one -- as a complete, transcendental analysis of the different modes of judgement is a far easier task, than the analysis of infinite unbounded concepts. We are able to start our analysis by drawing upon the prior scholarship of mundane logic, much like beginning a difficult ascent from a pre-established base camp. 
+But yet all such unity is also difference -- for every way in which various presentations are combined, we also perform the negative act of excluding other, unrelated presentations. Only in such a manner do our concepts have any order. This means that concepts are also \emph{judgements} -- acts of discernment and differentiation. Thus lies the basis step of Kant's inductive proof.\footnote{A mathematical analogy. Inductive proofs are completed in two steps, a \emph{basis} step, and an \emph{inductive} step.} As all acts of understanding are concepts, and all concepts judgement\ldots\ therefore all understanding is judgement. "Now since all acts of the understanding can be reduced to judgments, the understanding as such can be presented as a power of judgment" \autocite[B94]{hackett}. This reductive method in which we reduce the problem of finding the a prioriae of concepts to that of judgements is an indispensable one -- as a complete, transcendental analysis of the different modes of judgement is a far easier task, than the analysis of infinite unbounded concepts. We are able to start our analysis by drawing upon the prior scholarship of mundane logic, much like beginning a difficult ascent from a pre-established base camp.
+
+\begin{figure}[H]
+  \centering
+  \begin{multicols}{2}
+    \subsubsection*{Judgement of Quantity}
+    \begin{itemize}
+      \item Universal
+      \item Particular
+      \item Singular
+    \end{itemize}
+
+    \subsubsection*{Judgement of Quality}
+    \begin{itemize}
+      \item Affirmative
+      \item Negative
+      \item Infinite
+    \end{itemize}
+
+    \columnbreak
+    \subsubsection*{Judgement of Relation}
+    \begin{itemize}
+      \item Categorical
+      \item Hypothetical
+      \item Disjunctive
+    \end{itemize}
+
+    \subsubsection*{Judgement of Modality}
+    \begin{itemize}
+      \item Problematic
+      \item Assertoric
+      \item Apodeictic
+    \end{itemize}
+  \end{multicols}
+  \caption{Kant's Table of Judgements}
+  \label{judgements}
+\end{figure}
+
+\noindent
+Using the four logical judgements (or the `logical function in judgements', as per Kant's typical verbosity), we next perform the inductive or transcendental step -- of abstracting away from the content of judgement, to look at it's form. Mired in the difficulty of a rocky ascent, we are forced to take a brief detour to examine the byway of \emph{synthesis}, before the path forward becomes clear. Recall that the characteristic nature of concepts is their unifying function -- that act of uniting presentations. However the very act of judgement (i.e. unifying act) presupposes a priori the existence of a further concept, which gives unity to the synthesis of said disparate presentations. Hence, for all four formal logical judgement, there exists an associated a priori concept which gives synthetic unity to the presentations which underlie the judgement. These transcendental concepts -- now fully abstracted away from any material content of judgement, are the \emph{categories}: the \emph{pure elements of understanding} of the transcendental logic.
+
+\begin{figure}[H]
+  \centering
+  \begin{multicols}{2}
+    \subsubsection*{Category of Quantity}
+    \begin{itemize}
+      \item Unity
+      \item Plurality
+      \item Allness
+    \end{itemize}
+
+    \subsubsection*{Category of Quality}
+    \begin{itemize}
+      \item Reality
+      \item Negation
+      \item Limitation
+    \end{itemize}
+
+    \columnbreak
+    \subsubsection*{Category of Relation}
+    \begin{itemize}
+      \item Inherence \& Subsistence
+      \item Casuality \& Dependence
+      \item Community \& Interaction
+    \end{itemize}
+
+    \subsubsection*{Category of Modality}
+    \begin{itemize}
+      \item Possibility/Impossibility
+      \item Existence/Nonexistence
+      \item Necessity/Contingency
+    \end{itemize}
+  \end{multicols}
+  \caption{Kant's Table of Categories}
+  \label{categories}
+\end{figure}
