--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -1,7 +1,7 @@
 \section*{The Transcendental Aesthetic}
 Our expedition begins with the \emph{transcendental aesthetics} -- that philosophical trailhead, which separates the orderly boulevards of physics from the uncharted wilderness of metaphysics. For what better way there is to explore beyond the physical -- μετὰ τὰ φυσικά -- than by starting with the very foundation of our means of physical perception? Indeed through Kant's introductory division of knowledge as \emph{a priori} and \emph{a posteriori}, we are already driven to aesthetics, as it is the very means in which we know things \emph{a posteriori}.\footnote{A priori knowledge comes \emph{prior} to experience, lit. `from earlier.' A posteriori knowledge comes \emph{posterior} to experience, lit. `from later.'} The faculty of sensibility is shown to us as a means in which we (i.e. the subject, the reasoning human), have the power to intuit \emph{sensations}, which are presented to us by objects that are external to us. The study of sensations, sensibility, and the intuitions which we yield is the science of aesthetics. And it is from this springboard of aesthetics, where Kant begins the Copernican leap that upturns our world.
 
-For we ask ourselves the question: "can there be any a priori knowledge?" To which Kant responds with the demonstration that: although cognitions are composed of concepts which are in reference to objects, all concepts by necessity do not directly refer to their underlying object, but rather only to a sensible \emph{intuition}. However, our faculty of sensibility is never an active one. We never reach out and `grasp' the objects that we wish to sense with some sort of sensory ectoplasm. Rather, the faculty of sensibility is entirely passive -- it is solely our capacity for the \emph{receptivity} of sensation, our ability to be \emph{affected} by objects that are external to us:
+For we ask ourselves the question: "can there be any a priori knowledge?" To which Kant responds with the demonstration that: although cognitions are composed of concepts which are in reference to objects\footnote{Cognitions arise from the union of understanding with sensibility. Kant explores this in further detail starting at the transcendental analytic.}, all concepts by necessity do not directly refer to their underlying object, but rather only to a sensible \emph{intuition}. However, our faculty of sensibility is never an active one. We never reach out and `grasp' the objects that we wish to sense with some sort of sensory ectoplasm. Rather, the faculty of sensibility is entirely passive -- it is solely our capacity for the \emph{receptivity} of sensation, our ability to be \emph{affected} by objects that are external to us:
 
 \begin{quote}
 The capacity (a receptivity) to acquire presentations as a result of the way in which we are affected by objects is called \textbf{sensibility}. Hence by means of sensibility objects are \emph{given} to us, and it alone supplies us with \emph{intuitions}.
@@ -49,7 +49,10 @@ For one, it is readily apparent that should space and time be the necessary cond
 \noindent
 And yet, such a border is not a destructive one -- these constraints of the sensible condition are not the concessions of foreign occupiers, partitioning what is rightfully ours. But much like the demarcations of a city's walls, this limit is a productive one -- which allows wealth and industry to flourish. Our empirical world \emph{is} of appearances -- appearances of worldly objects given to the human subject, through the faculty of sensibility. As all of appearance partakes in the shared a prioriae of space and time, there is now a common \emph{synthetic} denominator, universal to all that is which we perceive. Any cognition is always the union of a piece of a posteriori matter, synthetically mated to an a priori form. Now we are able to make broad, general propositions about the empirical objects of sensation, by using the necessary a priori conditions for their appearance as the foundation for our reasoning.
 
-Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a marvellous one. It's metaphysical duality: the synthetic a prioriae both empirically real and transcendentally ideal, is a spectacular marriage that bridges the best parts of Scepticism and Idealism, while avoiding the nihilistic excesses of both. Such a treatment on intuition is already sufficient to serve as the foundation to mathematical intuition, which is indeed highly spatial and temporal (think of all the figures of geometry, or the integrals of calculus!). Furthermore, as far as intuition serves for the purpose of cognition (where cognition is the union of sensibility and understanding) -- Kant teases us with one final afterthought, which may prove hauntingly prescient in our age of artificial minds:
+\noindent
+It is this very generality, to which Kant takes as the foundation for mathematical intuition. Does it now follow that the universal applicability of mathematics rest in the foundation of these a priori forms behind intuition? Although some may think that the foundation of mathematics is secure now, to which we may close Kant's \emph{Critique} forever -- I caution that the mere existence of a priori forms behind intuition is not enough to sufficiently explain mathematical reasoning. For intuition serves only as the means in which we perceive empirical objects, not as a means in which we understand them. Mathematics deals not just with the intuitive process of appearances (i.e. the appearance of a triangle, that of a derivative), but also a discursive process of seeking the possibility of appearance (i.e. the creation of proofs, application of theorems). Such an act of seeking the possibility of appearance relies not merely on the a priori forms behind possible intuition, but also upon certain acts of understanding, which can only be found in the \emph{transcendental logic}. Hence, the transcendental aesthetic by itself is insufficient to explain the universal applicability of mathematics.
+
+Kant's transcendental treatment of aesthetics is a unique thesis, and indeed a marvellous one. It's metaphysical duality: the synthetic a prioriae both empirically real and transcendentally ideal, is a spectacular marriage that bridges the best parts of Scepticism and Idealism, while avoiding the nihilistic excesses of both. Such a treatment on intuition is already a foundation to mathematical intuition, which is indeed highly spatial and temporal (think of all the figures of geometry, or the integrals of calculus!). Furthermore, as far as intuition serves for the purpose of cognition (where cognition is the union of sensibility and understanding) -- Kant teases us with one final afterthought, which may prove hauntingly prescient in our age of artificial minds:
 
 \begin{quote}
   There is, moreover, no need for us to limit this kind of intuition -- intuition in space and time -- to the sensibility of man. It may be (though we cannot decide this) that any finite thinking being must necessarily agree with man in this regard.
@@ -67,7 +70,17 @@ But yet all such unity is also difference -- for every way in which various pres
 
 \input{sections/table-judgements.tex}
 
+However, upon what grounds do we have to reduce the power of understanding, into a power of judgement? Unlike a mathematical proof that may demonstrate equivalency through formal means (e.g. using the side-angle-side postulate to prove the similarity of two different triangles), this leap from concepts to judgements is an unintuitive\footnote{This is a colloquial usage of the word, no relation to Kantian intuition} one. As tourists unfamiliar to the customs of this land, we are forgiven to voice our suspicions to our guide. There are two problems in Kant's approach. On one hand, the given space of all possible concepts (a concept-space, to borrow a topological vocabulary) may be larger than judgement-space. On the other hand, the four logical judgements that Kant provides may be incomplete. The first question he answers on the basis that the functional nature of concepts makes them formally analogous to judgement (the enunciation which we have walked through in the above paragraph). It is the latter question -- that of whether or not the judgements provided are complete -- which serves as the essential linchpin that holds the Kantian wagon together. Kant himself recognises the dependency of his transcendental logic on furnishing a complete set of judgements:
+
+\begin{quote}
+  These concepts [judgements] can be collected in an essay that will be more or less comprehensive \ldots\ but by this -- as it were, mechanical -- procedure, we can never reliably deterine at what point that inquiry will be completed.
+
+  \autocite[B92]{hackett}
+\end{quote}
+
 \noindent
+Alas, Kant himself never clearly elucidates the reasons why his table of judgements is apodeictically complete. Although it is clear that he borrows the technical apparatus of classical logic, he modifies said apparatus to suit his transcendental use, justifying only his modifications, and not the choice of the apparatus itself. Whether this is because the justification was already apparent to him, or simply an oversight is unknown to us. Kant's judgements hold a certain resemblance to modern fields of mathematical logic. However, there is no single axiomatic formalisation that neatly corresponds to to all four judgements which he lists. The judgements of quality are analogous to propositional calculus, while the judgements of relation are valid forms of logical inference within propositional calculus. Judgements of quantity are analogous to predicate logic, while the judgements of modality bear the closest resemblance to modal logic. The fact that these Kantian forms of judgement do not correspond neatly to any axiomatically-complete system of logic (for indeed, modal logic as a field has only had axiomatic formalisations in this century) makes it difficult to demonstrate apodeictically that such a table of judgement is complete. Hence, the transcendental analysis of these judgements may not rest upon as certain of a foundation as Kant implies. However, assuming that these judgements are indeed complete, we may move on forth with our journey and not embarrass our guide any further. Let us delve into the pure elements of understanding which we seek.
+
 Using the four logical judgements (or the `logical function in judgements', as per Kant's typical verbosity), we next perform the inductive or transcendental step -- of abstracting away from the content of judgement, to look at it's form. Mired in the difficulty of a rocky ascent, we are forced to take a brief detour to examine the byway of \emph{synthesis}, before the path forward becomes clear. Recall that the characteristic nature of concepts is their unifying function -- that act of uniting presentations. However the very act of judgement (i.e. unifying act) presupposes a priori the existence of a further concept, which gives unity to the synthesis of said disparate presentations. Hence, for all four formal logical judgement, there exists an associated a priori concept which gives synthetic unity to the presentations which underlie the judgement. These transcendental concepts -- now fully abstracted away from any material content of judgement, are the \emph{categories}: the \emph{pure elements of understanding} of the transcendental logic.
 
 \input{sections/table-categories.tex}
