Completed the penultimate (?) paragraph in the transcendental logic.

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -84,3 +84,8 @@ Alas, Kant himself never clearly elucidates the reasons why his table of judgeme
 Using the four logical judgements (or the `logical function in judgements', as per Kant's typical verbosity), we next perform the inductive or transcendental step -- of abstracting away from the content of judgement, to look at it's form. Mired in the difficulty of a rocky ascent, we are forced to take a brief detour to examine the byway of \emph{synthesis}, before the path forward becomes clear. Recall that the characteristic nature of concepts is their unifying function -- that act of uniting presentations. However the very act of judgement (i.e. unifying act) presupposes a priori the existence of a further concept, which gives unity to the synthesis of said disparate presentations. Hence, for all four formal logical judgement, there exists an associated a priori concept which gives synthetic unity to the presentations which underlie the judgement. These transcendental concepts -- now fully abstracted away from any material content of judgement, are the \emph{categories}: the \emph{pure elements of understanding} of the transcendental logic.
 
 \input{sections/table-categories.tex}
+
+\noindent
+These twelve categories which are given to us from the faculty of understanding serve as the same transcendental foundation for conception, as the a priori forms of space and time relate to intuition. Having met these elements which compose the second part of the transcendental doctrine of elements, we are now once again left to ask of their utility. "What do these categories tell us about metaphysics? Are space, time, and the categories sufficient grounds for a complete metaphysical foundation?" The answer to this question is a nuanced one. For the transcendental elements of space, time, and category, are still insufficient in isolation. As with chemical elements, they are inert in their pure, transcendentally isolated state. They are the mere feedstock of reactions, which yield the dizzying chemistry that is cognition. For as we have hinted at throughout our journey, it is the union of intuition and concept which leads to cognition.
+
+This union is conceived of originally as a mundane\footnote{As opposed to transcendental.} one. For it seems that the imposition of a sensible intuition upon understanding leads by it's very nature to an \emph{empirical concept}. That is, a cognition which refers to an object of intuition. This would make this union a metaphysically barren one, for such empirical cognitions are fundamentally \emph{objective}, and hence contingent -- there is no space for a priori knowledge here. There can be no morganatic marriage\footnote{A marriage between persons of unequal social rank, e.g. Archduke Franz Ferdinand and Sophie Chotek.} in which we can salvage the union -- for the nature of a category is to bring differing contents into synthesis, and the pure element of intuition are by their definition, contentless. Our exploration of the transcendental landscape end by necessity at this insurmountable cliff. This appears to be the case, at least to the untrained eyes of a visitor. However, Kant is able to solve this seemingly impossible unity, through an act of transcendental clarity.
