Completed the section on the transcendental logic

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -89,3 +89,21 @@ Using the four logical judgements (or the `logical function in judgements', as p
 These twelve categories which are given to us from the faculty of understanding serve as the same transcendental foundation for conception, as the a priori forms of space and time relate to intuition. Having met these elements which compose the second part of the transcendental doctrine of elements, we are now once again left to ask of their utility. "What do these categories tell us about metaphysics? Are space, time, and the categories sufficient grounds for a complete metaphysical foundation?" The answer to this question is a nuanced one. For the transcendental elements of space, time, and category, are still insufficient in isolation. As with chemical elements, they are inert in their pure, transcendentally isolated state. They are the mere feedstock of reactions, which yield the dizzying chemistry that is cognition. For as we have hinted at throughout our journey, it is the union of intuition and concept which leads to cognition.
 
 This union is conceived of originally as a mundane\footnote{As opposed to transcendental.} one. For it seems that the imposition of a sensible intuition upon understanding leads by it's very nature to an \emph{empirical concept}. That is, a cognition which refers to an object of intuition. This would make this union a metaphysically barren one, for such empirical cognitions are fundamentally \emph{objective}, and hence contingent -- there is no space for a priori knowledge here. There can be no morganatic marriage\footnote{A marriage between persons of unequal social rank, e.g. Archduke Franz Ferdinand and Sophie Chotek.} in which we can salvage the union -- for the nature of a category is to bring differing contents into synthesis, and the pure element of intuition are by their definition, contentless. Our exploration of the transcendental landscape end by necessity at this insurmountable cliff. This appears to be the case, at least to the untrained eyes of a visitor. However, Kant is able to solve this seemingly impossible unity, through an act of transcendental clarity.
+
+\noindent
+Recall that empirical concepts do not refer to singular, individual intuitions -- but rather, they refer to manifolds of intuition, as exemplified by the earlier `race car' example. These manifolds of intuition, which we talk about in the transcendental sense (i.e abstracted away from their content) still contain the a priori forms of space and time, as these are the necessary conditions to intuition. The existence of these a priori manifolds, which are not experience, but only the possibility of experience\footnote{Kant sometimes uses the word presentation, which is a more general form that also encompasses non-intuitive sources.} (as they contain the formal a prioriae of space and time) -- yields a transcendental manifold which is capable of union with the categories. But what manner of a manifold is this? An abstract and unconcerned manifold\footnote{A manifold that does not contain an experiential subject. I have not explained this distinction yet, but it will become clear in due course.} of possible experience cannot ever be united in synthesis with the categories of pure understanding. Categories are just the a priori forms of judgements, e.g. the form of $((P \lor Q) \land \neg P) \to Q$\footnote{propositional notation for a disjunctive judgement}. Even though the intuitive manifold provides us with the propositional terms $P, Q$ (to extend the propositional logic metaphor), and the categories provide us with all the brackets and squiggly signs; the ultimate logical implication (denoted by the symbol `$\to$') is found in neither. Hence, with a simply unconcerned manifold, there is can be no union, and hence no cognition.
+
+This leads us to what is perhaps \emph{the} most thought-provoking idea in Kant's entire \emph{Critique of Pure Reason}, which is the \emph{synthetic unity of apperception}. This synthetic unity of apperception is the unifying act which is capable of bringing intuition together with concepts, yielding cognition. It is the `$\to$' symbol of every judgement. Kant leads us on, explaining:
+
+\begin{quote}
+  The \emph{I think} must be \emph{capable} of accompanying all my presentations. For otherwise something would be presented to me that could not be thought at all \ldots\ presentation that can be given prior to all thought is called \emph{intuition}.
+
+  Hence everything manifold in intuition has a necessary reference to the \emph{I think} in the same subject in whom this manifold is found.\footnote{This subject is the thinking self, i.e. the human being.} But this presentation [i.e., the \emph{I think}] is an act of spontaneity; i.e., it cannot be regarded as belonging to sensibility. I call it \emph{pure apperception}.
+
+  \autocite[B132]{hackett}
+\end{quote}
+
+\noindent
+Kant goes on to further elaborate regarding the offspring of such a union, which draw their resemblance from space (corresponding to the outer sense) and time (corresponding to the inner sense), in sections entitled \emph{On the Synthesis of Apprehension in Intuition}, and the \emph{On the Synthesis of Reproduction in Imagination}. However these discussions are merely the procedural lemmae of his transcendental analytic, contingent on the synthetic unity of apperception, and we will not elaborate upon them here. Instead we will spend the rest of our time examining the synthetic unity of apperception, this unifying force which marries sensibility and understanding.
+
+\section*{The Synthetic Unity of Apperception}
