--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -93,7 +93,7 @@ This union is conceived of originally as a mundane\footnote{As opposed to transc
 \noindent
 Recall that empirical concepts do not refer to singular, individual intuitions -- but rather, they refer to manifolds of intuition, as exemplified by the earlier `race car' example. These manifolds of intuition, which we talk about in the transcendental sense (i.e abstracted away from their content) still contain the a priori forms of space and time, as these are the necessary conditions to intuition. The existence of these a priori manifolds, which are not experience, but only the possibility of experience\footnote{Kant sometimes uses the word presentation, which is a more general form that also encompasses non-intuitive sources.} (as they contain the formal a prioriae of space and time) -- yields a transcendental manifold which is capable of union with the categories. But what manner of a manifold is this? An abstract and unconcerned manifold\footnote{A manifold that does not contain an experiential subject. I have not explained this distinction yet, but it will become clear in due course.} of possible experience cannot ever be united in synthesis with the categories of pure understanding. Categories are just the a priori forms of judgements, e.g. the form of $((P \lor Q) \land \neg P) \to Q$\footnote{propositional notation for a disjunctive judgement}. Even though the intuitive manifold provides us with the propositional terms $P, Q$ (to extend the propositional logic metaphor), and the categories provide us with all the brackets and squiggly signs; the ultimate logical implication (denoted by the symbol `$\to$') is found in neither. Hence, with a simply unconcerned manifold, there is can be no union, and hence no cognition.
 
-This leads us to what is perhaps \emph{the} most thought-provoking idea in Kant's entire \emph{Critique of Pure Reason}, which is the \emph{synthetic unity of apperception}. This synthetic unity of apperception is the unifying act which is capable of bringing intuition together with concepts, yielding cognition. It is the `$\to$' symbol of every judgement. Kant leads us on, explaining:
+This leads us to what is perhaps \emph{the} most thought-provoking idea in Kant's entire \emph{Critique of Pure Reason}, which is the \emph{synthetic unity of apperception}. This synthetic unity of apperception is the unifying act which is capable of bringing intuition together with concepts, yielding cognition. It is the `$\to$' symbol of every judgement. "This is what the little relational word \emph{is} in judgements intends [to indicate], in order to distinguish the objective unity of given presentations [the manifold] from the subjective one" \autocite[B142]{hackett} Kant leads us on, explaining:
 
 \begin{quote}
   The \emph{I think} must be \emph{capable} of accompanying all my presentations. For otherwise something would be presented to me that could not be thought at all \ldots\ presentation that can be given prior to all thought is called \emph{intuition}.
