Begin working on the synthetic unity of apperception.

--- a/latex/sections/body.tex
+++ b/latex/sections/body.tex
@@ -107,3 +107,11 @@ This leads us to what is perhaps \emph{the} most thought-provoking idea in Kant'
 Kant goes on to further elaborate regarding the offspring of such a union, which draw their resemblance from space (corresponding to the outer sense) and time (corresponding to the inner sense), in sections entitled \emph{On the Synthesis of Apprehension in Intuition}, and the \emph{On the Synthesis of Reproduction in Imagination}. However these discussions are merely the procedural lemmae of his transcendental analytic, contingent on the synthetic unity of apperception, and we will not elaborate upon them here. Instead we will spend the rest of our time examining the synthetic unity of apperception, this unifying force which marries sensibility and understanding.
 
 \section*{The Synthetic Unity of Apperception}
+What makes the synthetic unity of apperception so essential to the process of cognition? Kant canonicalises it as the basis for the possibility of understanding in respect to intuition. His presentation is as follows: 
+
+\begin{enumerate}
+  \item The supreme principle for the possibility of all intuition in reference to sensibility was, according to the transcendental aesthetic, that everything manifold in intuition is subject to the formal conditions of space and time.
+  \item The supreme principle for the possibility of all intuition in reference to understanding is that everything manifold in intuition is subject to the conditions of the original synthetic unity of apperception.
+
+  \autocite[B137]{hackett}
+\end{enumerate}
